fixed the navbar that was overstepping on the text and thus was not allowing for correct scrolling, specially bad on smaller screens, but now its fixed

--- a/tapias_portfolio/src/pages/MobileNavBar.css
+++ b/tapias_portfolio/src/pages/MobileNavBar.css
@@ -1,47 +1,53 @@
-.nav-container {
+.nav-wrapper {
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 1000; /* Ensure it is on top */
+}
+
+.nav-menu {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px;
-  background-color:transparent !important;
+  flex-direction:column;
+  align-items: flex-end;
+  background: none;
+  margin: 10px;
+  margin-right:100px;
 }
 
-.nav-brand {
-  font-size: 24px;
-  color:#F1E48E;
-
+.menu-text {
+  color: #efe49f;
+  font-size: 30px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  margin-right:10px;
+  margin-top:30px;
 }
-@media (min-width:0px){
+
 .nav-toggle {
   display: block;
   background: none;
-  position:relative;
   border: none;
-  color: white;
+  color: #efe49f;
   font-size: 40px;
   cursor: pointer;
-  position: relative;
-  margin-top:-90px;
-  left: -90px; /* Adjust to move the icon to the left */
-  border-radius:5px;
+  margin-right:-30px;
+  margin-top:-52px;
 }
-}
-
-
 
 .nav-links {
   display: none;
+  flex-direction: column;
+  background-color: #0b3504;
+  border: 2px solid black;
+  padding: 10px;
+  text-align: center;
+  width: 200px; /* Adjust width to make links wider */
+  border-radius:10px;
+  
 }
 
 .nav-links.active {
   display: flex;
-  flex-direction: column;
-  position: absolute;
-  top: 60px;
-  right: 0;
-  background-color: rgb(13, 65, 19);
-  width: 100%;
-  text-align: center;
 }
 
 .nav-item {
@@ -49,61 +55,49 @@
   text-decoration: none;
   margin: 10px 0;
   font-size: 18px;
+  padding: 10px;
+  border: 1px solid black;
+  text-align: center;
+  border-radius:10px;
 }
 
 .nav-item:hover {
   background-color: #0c2907;
 }
 
-.nav-menu {
-  display: flex;
-  align-items: center;
+
   
-}
+    
 
-.menu-text {
-  margin-right: 10px; /* Adjust margin as needed */
-  color:#efe49f;
-  font-size:30px;
-  margin-right:120px;
-  margin-top:-70px;
-  font-weight: bold;
-}
+    
 
-/* Media query for mobile view */
 
-  .nav-container {
-    padding: 10px;
-    background-color: transparent;
-  }
 
-  .nav-toggle {
-    display: block;
-    background: none;
-    border: none;
-    color: white;
-    font-size: 24px;
-    cursor: pointer;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-  }
+    
+  
+  
+  
+  
 
-  .nav-links {
-    display: none;
-    flex-direction: column;
-    position: absolute;
-    top: 60px;
-    right: 0;
-    background-color:#0b3504;
-    width: 100%;
-    text-align: center;
-  }
-
-  .nav-links.active {
-    display: flex;
-  }
-
-  .nav-item {
-    margin: 10px 0;
-  }
+  
+  
+  
+  
+  
+  
+  
+  
+    
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+    
